--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -13,8 +13,11 @@
         android:layout_marginLeft="@dimen/dim_10"
         android:layout_marginTop="@dimen/dim_15"
         android:text="Rs 20"
+        android:paddingLeft="6dp"
+        android:paddingTop="2dp"
+        android:gravity="center"
         android:textColor="#BB5139"
-        android:textSize="@dimen/dim_16" />
+        android:textSize="@dimen/dim_14" />
 
     <ImageView
         android:id="@+id/img_item"
@@ -34,9 +37,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dim_14"
         android:text="Veggie Burger"
-
         android:textColor="@color/black"
-        android:textSize="@dimen/dim_18" />
+        android:textSize="@dimen/dim_15" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add_cart"
@@ -45,9 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_item_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_12"
-        android:drawableLeft="@drawable/ic_cart"
-        android:drawablePadding="@dimen/dim_10"
+        android:layout_marginTop="@dimen/dim_20"
+        android:drawableLeft="@drawable/ic_cart_new"
+        android:drawablePadding="@dimen/dim_7"
         android:gravity="center_vertical"
         android:text="Add To Cart"
         android:textColor="@color/black"
