--- a/app/src/main/res/layout/breakfast_item.xml
+++ b/app/src/main/res/layout/breakfast_item.xml
@@ -5,18 +5,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/dim_60"
-    android:paddingTop="@dimen/dim_10">
+    android:paddingTop="@dimen/dim_20">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/frame_breakfast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:paddingLeft="@dimen/dim_20">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_item"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dim_250"
+            android:layout_height="@dimen/dim_300"
+            app:cardCornerRadius="@dimen/dim_5"
             app:cardBackgroundColor="@color/bg_color"
             app:cardElevation="@dimen/dim_10">
 
@@ -24,7 +25,9 @@
                 android:id="@+id/rel_break_fast"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/aloo_paratha"
+                android:adjustViewBounds="true"
+                android:layout_marginRight="-20dp"
+                android:src="@drawable/aloo_paratha"
                 android:scaleType="centerCrop" />
 
             <!--<ImageView
@@ -34,16 +37,16 @@
                 android:src="@drawable/aloo_pratha" />-->
 
         </android.support.v7.widget.CardView>
-    </FrameLayout>
+    </RelativeLayout>
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_breakfast_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dim_20"
-        android:layout_marginTop="@dimen/dim_215"
         android:background="@drawable/tv_trans_bg"
         android:gravity="center"
+        android:layout_alignBottom="@+id/frame_breakfast"
         android:padding="@dimen/dim_8"
         android:text="Aloo Pratha"
         android:textColor="@color/white"
@@ -70,7 +73,7 @@
         android:id="@+id/tv_add"
         android:layout_width="@dimen/dim_50"
         android:layout_height="@dimen/dim_50"
-        android:layout_marginTop="@dimen/dim_225"
+        android:layout_marginTop="@dimen/dim_275"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/dim_30"
         android:background="@drawable/gradient_circle_bg"
