--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:layout_marginTop="@dimen/dim_12"
     android:orientation="vertical"
+    android:layout_marginLeft="@dimen/dim_22"
+    android:layout_marginRight="@dimen/dim_22"
     app:cardElevation="@dimen/dim_10"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/dim_5">
@@ -20,6 +22,8 @@
             android:layout_gravity="right|top"
             android:background="@null"
             android:layout_margin="@dimen/dim_5"
+            android:paddingRight="@dimen/dim_10"
+            android:alpha=".5"
             android:id="@+id/img_btn_close"
             android:src="@drawable/close" />
 
