--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.localfriend.fragments.PaymentFragment">
 
     <ScrollView
@@ -60,14 +61,10 @@
                         android:layout_centerVertical="true"
                         android:checked="true" />
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
+            </android.support.v7.widget.CardView><android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dim_10"
-                android:layout_marginRight="@dimen/dim_10"
-                android:layout_marginTop="@dimen/dim_5"
+                android:layout_margin="@dimen/dim_10"
                 app:cardElevation="@dimen/dim_5">
 
                 <RelativeLayout
@@ -80,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:drawableLeft="@drawable/ic_paytm"
+                        android:drawableLeft="@drawable/ic_cod"
                         android:drawablePadding="@dimen/dim_10"
                         android:text="Pay with Paytm"
                         android:textColor="@color/black"
@@ -95,6 +92,7 @@
                         android:checked="false" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
@@ -112,6 +110,6 @@
         android:padding="@dimen/dim_10"
         android:text="REVIEW ORDER"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_18"
+        android:textSize="@dimen/dim_15"
         app:textStyle="@integer/roboto_medium" />
 </RelativeLayout>
