14th october by bhavesh 2nd time

--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -17,12 +17,12 @@
         android:baselineAligned="false"
         android:orientation="vertical"
         android:paddingLeft="@dimen/dim_60"
-        android:paddingTop="@dimen/dim_20">
+        android:paddingTop="@dimen/dim_15">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/img_profile"
-            android:layout_width="@dimen/dim_75"
-            android:layout_height="@dimen/dim_75"
+            android:layout_width="@dimen/dim_70"
+            android:layout_height="@dimen/dim_70"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dim_15"
             android:src="@drawable/default_pic"
@@ -30,20 +30,21 @@
             app:civ_border_width="1dp" />
 
         <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/txt_user_name"
             app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dim_10"
-            android:text="Kuldeep Singh"
+            android:text=""
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_18" />
+            android:textSize="@dimen/dim_16" />
 
     </LinearLayout>
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dim_20" />
+        android:layout_height="@dimen/dim_15" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
