--- a/app/src/main/res/layout/signup_dialog.xml
+++ b/app/src/main/res/layout/signup_dialog.xml
@@ -1,52 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="#80ffffff"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:cardBackgroundColor="#80ffffff">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:paddingTop="@dimen/dim_10"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/dim_10"
-        android:orientation="vertical">
-<com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:textColor="@color/black"
-    android:text="Message"
+        android:paddingTop="@dimen/dim_10">
 
-    android:textSize="@dimen/dim_18"
-    android:textStyle="bold"
-    />
-    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_10"
-        android:text="You have been successfully registered \n and please login now."
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/black"
-        android:textSize="@dimen/dim_16"
-        android:gravity="center_horizontal"
-        />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dim_1"
-            android:background="@color/green_bg"
-            android:layout_marginTop="@dimen/dim_10"
-            />
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="OK"
-            android:layout_marginTop="@dimen/dim_10"
-            android:id="@+id/tv_ok"
+            android:text="Message"
+            android:textColor="@color/black"
             android:textSize="@dimen/dim_18"
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
+
+        <com.localfriend.fonts.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dim_10"
+            android:gravity="center_horizontal"
+            android:text="You have been successfully registered \n and please login now."
+            android:textColor="@color/black"
+            android:textSize="@dimen/dim_16"
+            app:textStyle="@integer/roboto_medium" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim_1"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@color/green_bg" />
+
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/tv_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dim_10"
+            android:text="OK"
             android:textColor="@color/blue_text"
-            />
+            android:textSize="@dimen/dim_18"
+            app:textStyle="@integer/roboto_medium" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
