--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,6 +7,7 @@
         <item>Settings</item>
         <item>Need Help ?</item>
         <item>About Us</item>
+        <item>Logout</item>
     </string-array>
 
     <array name="ld_activityScreenIcons">
@@ -16,5 +17,6 @@
         <item>@drawable/menu_settings</item>
         <item>@drawable/menu_home</item>
         <item>@drawable/menu_about_us</item>
+        <item>@drawable/menu_logout</item>
     </array>
 </resources>
