--- a/app/src/main/res/drawable/rounded_dialog_white.xml
+++ b/app/src/main/res/drawable/rounded_dialog_white.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="#8D43C2"></stroke>
-    <corners android:radius="@dimen/dim_25" />
+
+    <corners
+        android:radius="@dimen/dim_10"/>
 </shape>
