--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -10,21 +10,21 @@
         app:textStyle="@integer/roboto_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dim_10"
-        android:layout_marginTop="@dimen/dim_15"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="14dp"
         android:text="Rs 20"
         android:paddingLeft="6dp"
         android:paddingTop="2dp"
         android:gravity="center"
         android:textColor="#BB5139"
-        android:textSize="@dimen/dim_14" />
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/img_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_55"
+        android:layout_marginTop="40dp"
         android:background="@null"
         android:src="@drawable/bakery" />
 
@@ -35,10 +35,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_item"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_14"
+        android:layout_marginTop="18dp"
         android:text="Veggie Burger"
         android:textColor="@color/black"
-        android:textSize="@dimen/dim_15" />
+        android:textSize="14sp" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add_cart"
@@ -47,11 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_item_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_20"
+        android:layout_marginTop="16dp"
+        android:padding="5dp"
         android:drawableLeft="@drawable/ic_cart_new"
         android:drawablePadding="@dimen/dim_7"
         android:gravity="center_vertical"
         android:text="Add To Cart"
         android:textColor="@color/black"
-        android:textSize="@dimen/dim_14" />
+        android:textSize="14sp" />
 </RelativeLayout>
