--- a/app/src/main/res/layout/vegetable_items.xml
+++ b/app/src/main/res/layout/vegetable_items.xml
@@ -13,63 +13,65 @@
         android:background="@drawable/rounded_corner_green">
 
         <TextView
+            android:id="@+id/tv_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dim_5"
             android:text="Rs.20"
-            android:id="@+id/tv_cost"
             android:textSize="@dimen/dim_16" />
 
         <TextView
+            android:id="@+id/tv_offer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:background="@drawable/rounded_tv_bg"
+            android:gravity="center"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
             android:padding="@dimen/dim_5"
             android:text="50% Off"
-            android:gravity="center"
-            android:id="@+id/tv_offer"
             android:textColor="#49CA99"
             android:textSize="@dimen/dim_16" />
 
         <ImageView
+            android:id="@+id/img_veg"
             android:layout_width="@dimen/dim_120"
             android:layout_height="@dimen/dim_120"
-           android:layout_below="@+id/tv_offer"
-            android:background="@null"
+            android:layout_below="@+id/tv_offer"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dim_10"
-            android:id="@+id/img_veg"
+            android:background="@null"
             android:src="@drawable/apple" />
+
         <TextView
+            android:id="@+id/tv_veg_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_veg"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:id="@+id/tv_veg_name"
-            android:textSize="@dimen/dim_16"
             android:text="Shimla Apple\n 1 KG"
-            />
+            android:textSize="@dimen/dim_16" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim_1"
             android:layout_above="@+id/tv_add_cart"
-            android:background="@color/colorPrimaryDark"
-            />
+            android:background="@color/colorPrimaryDark" />
+
         <TextView
+            android:id="@+id/tv_add_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/cart_green"
             android:layout_alignParentBottom="true"
-            android:text="Add to cart"
-            android:id="@+id/tv_add_cart"
-            android:gravity="center"
-            android:textSize="@dimen/dim_16"
-            android:textColor="#49CA99"
-            android:padding="@dimen/dim_5"
-            android:drawablePadding="@dimen/dim_10"
             android:layout_centerHorizontal="true"
-            />
+            android:drawableLeft="@drawable/cart_green"
+            android:drawablePadding="@dimen/dim_10"
+            android:gravity="center"
+            android:padding="@dimen/dim_10"
+            android:text="Add to cart"
+            android:textColor="#49CA99"
+            android:textSize="@dimen/dim_16" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
