--- a/app/src/main/res/drawable/small_corner_green.xml
+++ b/app/src/main/res/drawable/small_corner_green.xml
@@ -4,6 +4,6 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="#9046C3"></stroke>
-    <corners android:radius="@dimen/dim_25" />
+        android:color="@color/colorPrimaryDark"></stroke>
+    <corners android:radius="@dimen/dim_5" />
 </shape>
