--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="@dimen/dim_35"
         android:layout_marginRight="@dimen/dim_35"
         android:gravity="center"
-        android:textColor="#8D43C2"
+        android:textColor="#9046C3"
         android:layout_marginTop="@dimen/dim_10"
         android:background="@drawable/store_bg"
         android:padding="@dimen/dim_15" />
